--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
       --primary-font: 'Roboto', sans-serif;
 
       /* COLORS */
-      --gray-color: rgb(27, 27, 27);
+      --gray-color: rgb(46, 46, 46);
 }
 
 
@@ -49,7 +49,16 @@ img {
       width: 100%;
 }
 
+.section {
+      padding: 3rem 0;
+}
 
+.section__title {
+      padding: 3rem 0;
+
+      font-size: 40px;
+      text-align: center;
+}
 
 
 
@@ -152,31 +161,37 @@ img {
 
 /* ABOUT */
 .services {
-      padding: 1rem 0;
+      /* padding: 1rem 0; */
 }
 
 .services .container {
-      display: flex;
+      /* display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: flex-start; */
+
+      
 }
 
 .services__title {
-      padding: 1rem;
+      /* padding: 1rem;
       font-size: 40px;
+      text-align: center; */
 }
 
 .services-container {
-      display: flex;
+      /* display: flex;
       flex-wrap: wrap;
       align-items: center;
-      justify-content: space-around;
+      justify-content: space-around; */
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+      gap: 5rem;
 }
 
 .services-container__card{
-      width: 60%;
-      margin: 30px 0;
+      width: 100%;
+      /* margin: 30px 0; */
       text-align: center;
 }
 
@@ -230,35 +245,31 @@ img {
 
 /* PLACES */
 .places {
-      padding: 2rem 0;
+      /* padding: 2rem 0; */
       
       /* background: rgb(27, 27, 27); */
 
-      text-align: center;
+      /* text-align: center; */
 }
 
 .places__title {
-      text-align: center;
+      /* text-align: center;
       padding: 1rem;
       font-size: 40px;
-      color: #000;
+      color: #000; */
 }
 
 .places-container {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-around;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+      gap: 5rem;
 }
 
 .places-container__card {
       height: auto;
-      width: auto;
       margin: 20px 0;
-      position: relative;
+      /* position: relative; */
       text-align: center;
-      overflow: hidden;
 
       /* background: rgb(243, 243, 243); */
 }
@@ -266,8 +277,10 @@ img {
 .places-container__img {
       /* min-width: 400px; */
       height: 400px;
-      width: 400px;
+      
+     
       transition: all 0.5s ease;
+      object-fit: cover;
       
       z-index: 100;
 }
@@ -281,8 +294,8 @@ img {
 
       /* background: var(--gray-color);  */
       /* color: #fff; */
-      background: transparent;
-      color: #000;
+      background: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
 
       display: flex;
       flex-direction: column;
